[project]
name = "prototyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langgraph>=1.0.5",
    "markdown-it-py>=4.0.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
]
